examples/Example2.mj
// 1. Typed declarations without initializer → default values
int i
float f
double d
boolean flag
char c
String s

print i       // 0
print f       // 0.0
print d       // 0.0
print flag    // false
print c       // '\0' (empty char)
print s       // "" (empty string)


// 2. Mutable (`var`) vs immutable (`val`) declarations
var x = 42
print x      // 42

x = 100      // allowed
print x      // 100

val y = 3.14
print y      // 3.14

// y = 2.71  // error: cannot reassign val y


// 3. All literal forms
String greeting = "Hello, MinJ!"
print greeting     // Hello, MinJ!

char letter = 'Z'
print letter       // Z

boolean ready = true
print ready        // true

int sum = 5
float ratio = 2.5f
double pi = 3.14159
print sum         // 5
print ratio       // 2.5
print pi          // 3.14159

// 4. If-else statement
int a = 10
int b = 20

if a > b then:
    print "a is greater than b"
else:
    print "b is greater than or equal to a"